# scratchgpt

./: .gitignore  README.md  fringe.md  main.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  tests.yml
examples/: chemistry.py  chess.py  chess_tokenizer.py  simple.py
scratchgpt/: __init__.py  config.py  dataloader.py  infer.py  infer_neat.py  main.py  model_io.py  preprocess.py  train.py
scratchgpt/data/: __init__.py  datasource.py  hf_datasource.py
scratchgpt/model/: model.py
scratchgpt/tokenizer/: char_tokenizer.py  hf_tokenizer.py  neat_tokenizer.py  neat_tokenizer_spec.md  tiktoken.py
scratchgpt/training/: tokenize_utils.py  trainer.py
tests/: test_neat_tokenizer.py  test_preprocess.py  test_tokenizer_io.py
tests/data/: test_datasource.py  test_hf_datasource.py  test_tokenization_integration.py
tests/examples/: test_chess_tokenizer.py
tests/tokenizers/: test_tokenizer_io.py
tests/training/: test_tokenize_utils.py
