[project]
name = "scratchgpt"
version = "0.2.0"
description = "Add your description here"
authors = [
  { name = "Aleksandr Yeganov", email = "ayeganov@gmail.com"},
  { name = "Dario Cazzani", email ="dariocazzani@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "ptflops>=0.7.5",
    "pydantic-settings>=2.10.1",
    "pydantic-yaml>=1.6.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250809",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
]

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
skip_glob = [".venv"]

[tool.pylint."MESSAGES CONTROL"]
disable = ["missing-module-docstring", "missing-class-docstring"]
extension-pkg-whitelist = "pydantic"

[tool.pylint.REPORTS]
output-format = "parseable"

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.DESIGN]
max-args = 10
max-attributes = 10

[tool.black]
line-length = 120
target-version = ['py312']

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
train = "scratchgpt.main:main"
infer = "scratchgpt.infer:main"
tiktoken = "scratchgpt.tokenizer.tiktoken:main"
